Se actualizó HorarioControllerTest para ser más robusto